--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,31 @@
 
 body {
   background-color: black;
+  color: white
 }
 
 
 
 h1 {
   color: white;
+  font-family: Verdana;
+  font-weight: normal;
+  font-size: 50px;
+  text-align: center;
 
+}
+
+h2 {
+  color: white;
+}
+
+
+a {
+  color: aquamarine;
+  font-size: 16px;
+}
+
+
+.promovid {
+    text-align: center;
 }
