--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,12 @@
 
 body {
   background-color: black;
-  color: white
-}
+  font-family: Verdana, sans-serif;
+  }
 
+header, section {
+  text-align: center;
+}
 
 
 h1 {
@@ -28,4 +31,14 @@ a {
 
 .promovid {
     text-align: center;
+}
+
+p {
+  color: gray;
+  font-size: 21px;
+}
+
+footer {
+  background-color: black;
+  text-align: right;
 }
