--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,8 @@
 body {
   background-color: black;
   font-family: Verdana, sans-serif;
+  font-size: 16px;
+
   }
 
 header, section {
@@ -20,6 +22,10 @@ h1 {
 
 h2 {
   color: white;
+  font-family: Verdana;
+  font-size: 42px;
+  font-weight: 300;
+
 }
 
 
@@ -29,16 +35,19 @@ a {
 }
 
 
-.promovid {
-    text-align: center;
-}
-
 p {
   color: gray;
   font-size: 21px;
 }
 
+
 footer {
   background-color: black;
+
+}
+
+#text_right {
   text-align: right;
+  font-size: 16px;
+  font-weight: normal;
 }
